# Elliptical-Traffic-Sign-Recognition

./: README.md
Neural_Network/: CMakeLists.txt  data_normalization.cpp  neural_network.cpp
getDataSet/: CMakeLists.txt  EllipseDetectorYaed.cpp  EllipseDetectorYaed.h  common.cpp  common.h  dataPre.cpp  getimg.cpp  hsiModel.h  trainNeuralNet.cpp
getVideo/: CMakeLists.txt  data.cpp
server/: CMakeLists.txt  EllipseDetectorYaed.cpp  Main.cpp  common.cpp  common.h  hsiModel.cpp  neuralNet.cpp  neuralNet.h  neuralNet.xml  newServer.cpp  newServer.h
